# magent

./: Makefile  README.md
files/: magent.config  magent.hotplug  magent.init  rootCA.crt
src/: CMakeLists.txt  application.c  application.h  main.c  mosq.c  mosq.h  queue.c  queue.h  tzdata.h  ubus.c  ubus.h  utils.c  utils.h
